Node key reference sets/bitmaps should not be inlined… (#645)
* Node key reference sets/bitmaps should not be inlined in the tree node (is now a child of the tree node with a special pointer).

Thus, during rotations no unnecessary copy of all node keys... (only if a key is added/removed).

* Renames module xquery => query as it's JSONiq based

* Renames module xquery => query as it's JSONiq based

* Remove generated classes

* Fix package names

* Add missing class

* Add missing resource files